api completed runner